--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -3,3 +3,8 @@ $anotherblue: #7986CB;
 $background: #E1F5FE;
 $neon: #66BB6A;
 $orange: #FF5722;
+$btnBlue: #03A9F4;
+$btnFontColor: #E1F5FE;
+$mainFontColor: #0288D1;
+$mainFont: 'Josefin Sans', sans-serif;
+$bordercolor: #B3E5FC;
