--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -8,7 +8,7 @@
 /*
     Display
  */
-.search-result, .results, .filters, .filter, .result-box, .flight-info, .price-box, .info, .further-info-button, .further-info-box, .transport-info, .payment-page .container, .payment-page .center-box, .payment-page .wrap-row, .payment-page .center {
+.previousFlights .prevFlight .previous-search, .search-result, .results, .filters, .filter, .result-box, .flight-info, .price-box, .info, .further-info-button, .further-info-box, .transport-info, .payment-page .container, .payment-page .center-box, .payment-page .wrap-row, .payment-page .center {
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flexbox;
@@ -74,7 +74,7 @@
   -webkit-justify-content: flex-end;
   justify-content: flex-end; }
 
-footer, .filter, .price-box, .info, .payment-page .container, .payment-page .center-box {
+footer, .filter, .price-box, .info, .further-info-button, .payment-page .container, .payment-page .center-box {
   -webkit-box-pack: center;
   -moz-box-pack: center;
   -webkit-flex-pack: center;
@@ -83,7 +83,7 @@ footer, .filter, .price-box, .info, .payment-page .container, .payment-page .cen
   -webkit-justify-content: center;
   justify-content: center; }
 
-.payment-page .wrap-row {
+.previousFlights .prevFlight .previous-search, .payment-page .wrap-row {
   -webkit-box-pack: justify;
   -moz-box-pack: justify;
   -webkit-flex-pack: justify;
@@ -123,7 +123,7 @@ body {
   min-height: 100%;
   padding-bottom: 50px;
   position: relative;
-  font-family: 'Josefin Sans', sans-serif; }
+  font-family: "Josefin Sans", sans-serif; }
 
 .hidden {
   display: none; }
@@ -179,7 +179,22 @@ body {
   .previousFlights .prevFlight {
     display: flex;
     padding: 15px;
-    margin: 15px 0; }
+    margin: 15px 0;
+    font-size: 18px; }
+    .previousFlights .prevFlight .previous-search {
+      width: 400px; }
+      .previousFlights .prevFlight .previous-search input {
+        height: 25px;
+        font-size: 15px;
+        font-family: "Josefin Sans", sans-serif;
+        border: solid 1px #B3E5FC; }
+      .previousFlights .prevFlight .previous-search button {
+        width: 60px;
+        height: 25px;
+        border: none;
+        font-size: 15px;
+        cursor: pointer;
+        text-align: center; }
 
 a {
   text-transform: uppercase;
@@ -208,6 +223,9 @@ footer {
       list-style: none;
       text-transform: uppercase; }
 
+.destinations {
+  color: #0288D1; }
+
 .search-result {
   width: 100%; }
 
@@ -226,15 +244,19 @@ footer {
 
 .filter {
   width: 25vw;
-  height: 100%; }
+  height: 100%;
+  cursor: pointer; }
   .filter p {
-    font-size: 25px; }
+    font-size: 25px;
+    color: #4FC3F7; }
     @media only screen and (max-width: 736px) {
       .filter p {
         font-size: 18px; } }
 
 #cheap {
-  background-color: #BBDEFB; }
+  background-color: #03A9F4; }
+  #cheap p {
+    color: #E1F5FE !important; }
 
 .result-box {
   width: 100%;
@@ -246,7 +268,8 @@ footer {
 
 .flight-info {
   width: 70%;
-  height: 300px; }
+  height: 300px;
+  color: #0288D1; }
   @media only screen and (max-width: 736px) {
     .flight-info {
       width: 100%;
@@ -258,9 +281,11 @@ footer {
   .price-box button {
     width: 150px;
     height: 50px;
-    border: 2px solid black;
-    font-size: 15px;
-    cursor: pointer; }
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    background-color: #03A9F4;
+    color: #E1F5FE; }
     @media only screen and (max-width: 736px) {
       .price-box button {
         font-size: 12px;
@@ -269,7 +294,8 @@ footer {
   .price-box p {
     font-size: 30px;
     font-weight: bold;
-    padding-bottom: 20px; }
+    padding-bottom: 20px;
+    color: #01579B; }
     @media only screen and (max-width: 736px) {
       .price-box p {
         font-size: 22px;
@@ -300,8 +326,13 @@ footer {
 .further-info-button {
   width: 100%;
   height: 30px;
-  border-top: solid 1px #e9e9e9;
+  border-top: solid 1px #B3E5FC;
+  text-transform: uppercase;
+  font-size: 20px;
   padding-left: 10px; }
+  .further-info-button p {
+    color: #0288D1;
+    border-bottom: 2px solid #0288D1; }
 
 .further-info-box {
   height: 100px;
@@ -367,12 +398,17 @@ footer {
 .card {
   background-color: #FFFFFF;
   border-style: solid;
-  border-color: #e9e9e9;
-  border-bottom-color: #dfdfdf;
+  border-color: #B3E5FC;
+  border-bottom-color: #81D4FA;
   border-width: 1px 1px 2px 1px; }
 
 .search-card {
   width: 100%;
   margin-top: 15px; }
+
+.regular-button {
+  background-color: #03A9F4 !important;
+  color: #E1F5FE !important;
+  font-family: "Josefin Sans", sans-serif; }
 
 /*# sourceMappingURL=styles.css.map */
