--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -14,7 +14,7 @@ body{
   min-height: 100%;
   padding-bottom: 50px;
   position: relative;
-	font-family: 'Josefin Sans', sans-serif;
+	font-family: $mainFont;
 }
 .hidden{ display: none }
 #search-bar{
@@ -74,6 +74,26 @@ body{
     @include align-items(center);
     padding: 15px;
     margin: 15px 0;
+		font-size: 18px;
+			.previous-search {
+				@include display-flex();
+				@include justify-content(space-between);
+				width: 400px;
+				input {
+					height: 25px;
+					font-size: 15px;
+					font-family: $mainFont;
+					border: solid 1px $bordercolor;
+				}
+				button {
+					width: 60px;
+					height: 25px;
+					border: none;
+					font-size: 15px;
+			    cursor: pointer;
+					text-align: center;
+				}
+		}
   }
 }
 a{
@@ -109,6 +129,12 @@ footer{
   }
 }
 
+.destinations {
+	color: $mainFontColor;
+}
+
+
+
 
 ///// Search results //////
 
@@ -139,12 +165,14 @@ footer{
 .filter {
 	width: 25vw;
 	height: 100%;
+	cursor: pointer;
 	@include display-flex;
 	@include align-items(center);
 	@include justify-content(center);
 
 	p {
 		font-size: 25px;
+		color: #4FC3F7;
 		@include bp-mobile(){
 			font-size: 18px;
 		}
@@ -152,7 +180,11 @@ footer{
 }
 
 #cheap {
-	background-color: #BBDEFB;
+	background-color: $btnBlue;
+	p {
+		color: $btnFontColor !important;
+	}
+
 }
 
 .result-box {
@@ -168,6 +200,7 @@ footer{
 .flight-info {
 	width: 70%;
 	height: 300px;
+	color: $mainFontColor;
 	@include display-flex;
 	@include flex-direction(column);
 	@include justify-content(space-around);
@@ -189,9 +222,11 @@ footer{
 	button {
 		width: 150px;
 		height: 50px;
-		border: 2px solid black;
-		font-size: 15px;
+		border: none;
+		font-size: 18px;
     cursor: pointer;
+		background-color: $btnBlue;
+		color: $btnFontColor;
 		@include bp-mobile() {
 			font-size: 12px;
 			height: 30px;
@@ -203,6 +238,7 @@ footer{
 		font-size: 30px;
 		font-weight: bold;
 		padding-bottom: 20px;
+		color: #01579B;
 
 		@include bp-mobile() {
 			font-size: 22px;
@@ -249,10 +285,18 @@ footer{
 .further-info-button {
 	width: 100%;
 	height: 30px;
-	border-top: solid 1px #e9e9e9;
+	border-top: solid 1px $bordercolor;
+	text-transform: uppercase;
+	font-size: 20px;
 	@include display-flex;
 	@include align-items(center);
+	@include justify-content(center);
 	padding-left: 10px;
+
+	p {
+		color: $mainFontColor;
+		border-bottom: 2px solid $mainFontColor;
+	}
 
 }
 
@@ -377,12 +421,18 @@ footer{
 .card {
 	background-color: #FFFFFF;
 	border-style: solid;
-  border-color: #e9e9e9;
-  border-bottom-color: #dfdfdf;
+  border-color: $bordercolor;
+  border-bottom-color: #81D4FA;
   border-width: 1px 1px 2px 1px;
 }
 
 .search-card {
 		width: 100%;
     margin-top: 15px;
+}
+
+.regular-button {
+	background-color: $btnBlue !important;
+	color: $btnFontColor !important;
+	font-family: $mainFont;
 }
