--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -436,4 +436,5 @@ footer{
 	background-color: $btnBlue !important;
 	color: $btnFontColor !important;
 	font-family: $mainFont;
+	cursor: pointer;
 }
