--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -169,12 +169,13 @@ body {
         flex-direction: column;
         justify-content: center; } }
     #search-bar form input {
-      border: solid 1px black;
       margin: 0 5px;
       height: 25px; }
       @media only screen and (max-width: 736px) {
         #search-bar form input {
           margin: 2px 0px; } }
+    #search-bar form .passengers {
+      width: 30px; }
     #search-bar form button {
       height: 50px;
       width: 50px;
@@ -184,7 +185,9 @@ body {
       color: white;
       font-weight: bold;
       font-family: arial;
-      box-shadow: 0 0 2px #227270;
+      -webkit-box-shadow: 0px 0px 4px #888888;
+      -moz-box-shadow: 0px 0px 4px #888888;
+      box-shadow: 0px 0px 4px #888888;
       cursor: pointer;
       position: absolute;
       right: 0px;
@@ -194,9 +197,9 @@ body {
       -o-transition: all 100ms ease;
       transition: all 100ms ease; }
       #search-bar form button:hover {
-        height: 48px;
-        width: 48px;
-        right: 0px; }
+        -webkit-box-shadow: 0px 0px 0px #888888;
+        -moz-box-shadow: 0px 0px 0px #888888;
+        box-shadow: 0px 0px 0px #888888; }
 
 .previousFlights {
   margin: 0 auto;
@@ -220,16 +223,6 @@ body {
         font-size: 15px;
         cursor: pointer;
         text-align: center; }
-
-a {
-  text-transform: uppercase;
-  text-decoration: none;
-  background-color: #3F51B5;
-  padding: 10px 15px;
-  border-radius: 200px;
-  color: white;
-  box-shadow: 0 0 2px #227270;
-  margin: 0 5px; }
 
 footer {
   position: absolute;
