--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -150,6 +150,9 @@ body {
   position: relative;
   font-family: "Josefin Sans", sans-serif; }
 
+.fa {
+  color: #3F51B5; }
+
 .hidden {
   display: none; }
 
@@ -182,20 +185,20 @@ body {
       border-radius: 50%;
       background-color: #3F51B5;
       border: none;
-      color: white;
-      font-weight: bold;
-      font-family: arial;
-      -webkit-box-shadow: 0px 0px 4px #888888;
-      -moz-box-shadow: 0px 0px 4px #888888;
-      box-shadow: 0px 0px 4px #888888;
       cursor: pointer;
       position: absolute;
       right: 0px;
+      -webkit-box-shadow: 0px 0px 4px #888888;
+      -moz-box-shadow: 0px 0px 4px #888888;
+      box-shadow: 0px 0px 4px #888888;
       -webkit-transition: all 100ms ease;
       -moz-transition: all 100ms ease;
       -ms-transition: all 100ms ease;
       -o-transition: all 100ms ease;
       transition: all 100ms ease; }
+      #search-bar form button .fa {
+        color: white;
+        margin-right: 2px; }
       #search-bar form button:hover {
         -webkit-box-shadow: 0px 0px 0px #888888;
         -moz-box-shadow: 0px 0px 0px #888888;
