--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -17,6 +17,9 @@ body{
   position: relative;
 	font-family: $mainFont;
 }
+.fa{
+	color: $blue;
+}
 .hidden{ display: none }
 #search-bar{
   display: flex;
@@ -52,14 +55,15 @@ body{
       border-radius: 50%;
       background-color: $blue;
       border: none;
-      color: white;
-      font-weight: bold;
-      font-family: arial;
-			@include box-shadow(0px, 0px, 4px, #888888, false);
       cursor: pointer;
       position: absolute;
       right: 0px;
+			@include box-shadow(0px, 0px, 4px, #888888, false);
       @include transitionEase(all, 100ms);
+			.fa{
+				color: white;
+				margin-right: 2px;
+			}
       &:hover{
 				@include box-shadow(0px, 0px, 0px, #888888, false);
       }
