--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -8,3 +8,4 @@ $btnFontColor: #E1F5FE;
 $mainFontColor: #0288D1;
 $mainFont: 'Josefin Sans', sans-serif;
 $bordercolor: #B3E5FC;
+$navBackColor: #81D4FA;
