--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -8,7 +8,7 @@
 /*
     Display
  */
-.previousFlights .prevFlight .previous-search, .search-result, .results, .filters, .filter, .result-box, .flight-info, .price-box, .info, .further-info-button, .further-info-box, .transport-info, .payment-page .container, .payment-page .center-box, .payment-page .wrap-row, .payment-page .center {
+.previousFlights .prevFlight .previous-search, .search-result, .results, .filters, .filter, .result-box, .flight-info, .price-box, .info, .further-info-button, .further-info-box, .options div, .transport-info, .payment-page .container, .payment-page .center-box, .payment-page .wrap-row, .payment-page .center, .booking-wrapper, .booking-information, .booking-information div {
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flexbox;
@@ -27,7 +27,7 @@
   -ms-flex-direction: row;
   flex-direction: row; }
 
-.results, .flight-info, .price-box, .further-info-box, .payment-page .center-box {
+.results, .flight-info, .price-box, .further-info-box, .payment-page .center-box, .booking-information {
   -webkit-box-orient: vertical;
   -moz-box-orient: vertical;
   -webkit-flex-direction: column;
@@ -74,7 +74,7 @@
   -webkit-justify-content: flex-end;
   justify-content: flex-end; }
 
-footer, .filter, .price-box, .info, .further-info-button, .payment-page .container, .payment-page .center-box {
+footer, .filter, .price-box, .info, .further-info-button, .payment-page .container, .payment-page .center-box, .booking-wrapper, .booking-information div {
   -webkit-box-pack: center;
   -moz-box-pack: center;
   -webkit-flex-pack: center;
@@ -92,7 +92,7 @@ footer, .filter, .price-box, .info, .further-info-button, .payment-page .contain
   -webkit-justify-content: space-between;
   justify-content: space-between; }
 
-.previousFlights .prevFlight, footer ul, .search-result, .flight-info, .further-info-box {
+.previousFlights .prevFlight, footer ul, .search-result, .flight-info, .further-info-box, .booking-information {
   -moz-justify-content: space-around;
   -webkit-justify-content: space-around;
   justify-content: space-around; }
@@ -100,7 +100,7 @@ footer, .filter, .price-box, .info, .further-info-button, .payment-page .contain
 /*
     Align items
  */
-#search-bar, #search-bar form, .previousFlights .prevFlight, .filter, .price-box, .info, .further-info-button, .transport-info {
+#search-bar, #search-bar form, .previousFlights .prevFlight, .filter, .price-box, .info, .further-info-button, .options div, .transport-info, .booking-wrapper, .booking-information, .booking-information div {
   -webkit-box-align: center;
   -ms-flex-align: center;
   -webkit-align-items: center;
@@ -143,7 +143,9 @@ body {
 #search-bar {
   display: flex;
   flex-direction: column;
-  padding: 50px 0px; }
+  padding: 50px 0px;
+  background-color: #81D4FA;
+  border-bottom: solid 2px #29B6F6; }
   #search-bar div {
     padding-bottom: 40px; }
   #search-bar form {
@@ -156,34 +158,30 @@ body {
         flex-direction: column;
         justify-content: center; } }
     #search-bar form input {
-      border: solid 1px black;
+      border: solid 1px #E1F5FE;
+      background-color: #81D4FA;
       margin: 0 5px;
-      height: 25px; }
+      height: 35px;
+      width: 150px;
+      color: #E1F5FE;
+      font-family: "Josefin Sans", sans-serif;
+      font-size: 20px; }
       @media only screen and (max-width: 736px) {
         #search-bar form input {
           margin: 2px 0px; } }
     #search-bar form button {
-      height: 50px;
-      width: 50px;
-      border-radius: 50%;
-      background-color: #3F51B5;
+      height: 35px;
+      width: 80px;
       border: none;
       color: white;
-      font-weight: bold;
-      font-family: arial;
+      font-size: 20px;
       box-shadow: 0 0 2px #227270;
       cursor: pointer;
-      position: absolute;
-      right: 0px;
       -webkit-transition: all 100ms ease;
       -moz-transition: all 100ms ease;
       -ms-transition: all 100ms ease;
       -o-transition: all 100ms ease;
       transition: all 100ms ease; }
-      #search-bar form button:hover {
-        height: 48px;
-        width: 48px;
-        right: 0px; }
 
 .previousFlights {
   margin: 0 auto;
@@ -209,14 +207,7 @@ body {
         text-align: center; }
 
 a {
-  text-transform: uppercase;
-  text-decoration: none;
-  background-color: #3F51B5;
-  padding: 10px 15px;
-  border-radius: 200px;
-  color: white;
-  box-shadow: 0 0 2px #227270;
-  margin: 0 5px; }
+  text-decoration: none; }
 
 footer {
   position: absolute;
@@ -266,7 +257,7 @@ footer {
         font-size: 18px; } }
 
 #cheap {
-  background-color: #03A9F4; }
+  background-color: #1976D2; }
   #cheap p {
     color: #E1F5FE !important; }
 
@@ -329,11 +320,8 @@ footer {
   @media only screen and (max-width: 736px) {
     .info {
       height: 50px; } }
-
-.line {
-  width: 20px;
-  height: 3px;
-  background-color: black; }
+  .info i {
+    font-size: 40px; }
 
 .further-info-button {
   width: 100%;
@@ -341,21 +329,33 @@ footer {
   border-top: solid 1px #B3E5FC;
   text-transform: uppercase;
   font-size: 20px;
-  padding-left: 10px; }
+  padding-top: 10px; }
   .further-info-button p {
-    color: #0288D1;
-    border-bottom: 2px solid #0288D1; }
+    color: #4FC3F7;
+    border-bottom: 2px solid #4FC3F7; }
 
 .further-info-box {
-  height: 100px;
+  height: 150px;
   width: 100%;
-  padding-left: 10px; }
+  padding-left: 10px;
+  color: #0288D1;
+  font-size: 18px; }
 
-.transport-info div {
-  width: 10px;
-  height: 3px;
-  background-color: black;
-  margin: 0px 7px 0px 7px; }
+.need-adress {
+  text-align: center;
+  font-size: 20px; }
+
+.options div p {
+  margin-left: 10px; }
+
+.option-header {
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding-bottom: 5px; }
+
+.transport-info i {
+  padding-left: 8px; }
 
 .payment-page * {
   font-family: sans-serif;
@@ -421,6 +421,30 @@ footer {
 .regular-button {
   background-color: #03A9F4 !important;
   color: #E1F5FE !important;
-  font-family: "Josefin Sans", sans-serif; }
+  font-family: "Josefin Sans", sans-serif;
+  box-shadow: 0 0 2px #227270; }
+
+.booking-wrapper {
+  width: 100%;
+  height: 100vh; }
+
+.booking-information {
+  height: 500px;
+  width: 400px; }
+  .booking-information p {
+    font-size: 25px;
+    color: #0288D1;
+    font-weight: bold; }
+  .booking-information input {
+    width: 220px;
+    height: 30px;
+    font-size: 20px;
+    font-family: "Josefin Sans", sans-serif;
+    color: #0288D1;
+    border: solid 1px #B3E5FC; }
+  .booking-information div {
+    width: 100px;
+    height: 30px;
+    cursor: pointer; }
 
 /*# sourceMappingURL=styles.css.map */
