--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -23,6 +23,8 @@ body{
   @include align-items(center);
   flex-direction: column;
   padding: 50px 0px;
+	background-color: $navBackColor;
+	border-bottom: solid 2px #29B6F6;
   div{
     padding-bottom: 40px;
   }
@@ -37,31 +39,31 @@ body{
       justify-content: center;
     }
     input{
-      border: solid 1px black;
+      border: solid 1px $btnFontColor;
+			background-color: $navBackColor;
       margin: 0 5px;
-      height: 25px;
+      height: 35px;
+			width: 150px;
+			color: $btnFontColor;
+			font-family: $mainFont;
+			font-size: 20px;
       @include bp-mobile() {
         margin: 2px 0px;
       }
     }
     button{
-      height: 50px;
-      width: 50px;
-      border-radius: 50%;
-      background-color: $blue;
+      height: 35px;
+      width: 80px;
       border: none;
       color: white;
-      font-weight: bold;
-      font-family: arial;
+			font-size: 20px;
       box-shadow: 0 0 2px #227270;
       cursor: pointer;
-      position: absolute;
-      right: 0px;
       @include transitionEase(all, 100ms);
       &:hover{
-        height: 48px;
-        width: 48px;
-        right: 0px;
+        // height: 48px;
+        // width: 48px;
+        // right: 0px;
       }
     }
   }
@@ -98,14 +100,7 @@ body{
   }
 }
 a{
-  text-transform: uppercase;
   text-decoration: none;
-  background-color: $blue;
-  padding: 10px 15px;
-  border-radius: 200px;
-  color: white;
-  box-shadow: 0 0 2px #227270;
-  margin: 0 5px;
 }
 
 footer{
@@ -181,7 +176,7 @@ footer{
 }
 
 #cheap {
-	background-color: $btnBlue;
+	background-color: #1976D2;
 	p {
 		color: $btnFontColor !important;
 	}
@@ -275,12 +270,10 @@ footer{
 		height: 50px;
 	}
 
-}
+	i {
+		font-size: 40px;
+	}
 
-.line {
-	width: 20px;
-	height: 3px;
-	background-color: black;
 }
 
 .further-info-button {
@@ -292,34 +285,54 @@ footer{
 	@include display-flex;
 	@include align-items(center);
 	@include justify-content(center);
-	padding-left: 10px;
+	padding-top: 10px;
 
 	p {
-		color: $mainFontColor;
-		border-bottom: 2px solid $mainFontColor;
+		color: #4FC3F7;
+		border-bottom: 2px solid #4FC3F7;
+
 	}
 
 }
 
 .further-info-box {
-	height: 100px;
+	height: 150px;
 	width: 100%;
 	padding-left: 10px;
+	color: $mainFontColor;
+	font-size: 18px;
 	@include display-flex;
 	@include flex-direction(column);
 	@include justify-content(space-around);
+}
+
+.need-adress {
+	text-align: center;
+	font-size: 20px;
+}
+
+.options div {
+	@include display-flex();
+	@include align-items(center);
+	p {
+		margin-left: 10px;
+	}
+}
+
+.option-header {
+	font-size: 20px;
+	text-transform: uppercase;
+	font-weight: bold;
+	padding-bottom: 5px;
+
 }
 
 .transport-info {
 	@include display-flex;
 	@include align-items(center);
 
-
-	div {
-		width: 10px;
-		height: 3px;
-		background-color: black;
-		margin: 0px 7px 0px 7px;
+	i {
+		padding-left: 8px;
 	}
 }
 
@@ -436,4 +449,49 @@ footer{
 	background-color: $btnBlue !important;
 	color: $btnFontColor !important;
 	font-family: $mainFont;
+	box-shadow: 0 0 2px #227270;
+}
+
+//Booking
+
+.booking-wrapper {
+	width: 100%;
+	height: 100vh;
+	@include display-flex();
+	@include align-items(center);
+	@include justify-content(center);
+}
+
+.booking-information {
+	height: 500px;
+	width: 400px;
+	@include display-flex();
+	@include flex-direction(column);
+	@include align-items(center);
+	@include justify-content(space-around);
+
+	p {
+		font-size: 25px;
+		color: $mainFontColor;
+		font-weight: bold;
+	}
+
+	input {
+		width: 220px;
+		height: 30px;
+		font-size: 20px;
+		font-family: $mainFont;
+		color: $mainFontColor;
+		border: solid 1px $bordercolor;
+		// margin-bottom: 10px;
+	}
+
+	div {
+		width: 100px;
+		height: 30px;
+		@include display-flex();
+		@include justify-content(center);
+		@include align-items(center);
+		cursor: pointer;
+	}
 }
