--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -151,7 +151,7 @@ body {
   font-family: "Josefin Sans", sans-serif; }
 
 .fa {
-  color: #3F51B5; }
+  color: #0288D1; }
 
 .hidden {
   display: none; }
@@ -186,7 +186,7 @@ body {
     #search-bar form .passengers {
       width: 30px; }
     #search-bar form button {
-      height: 35px;
+      height: 50px;
       width: 80px;
       border: none;
       color: white;
@@ -392,10 +392,12 @@ footer {
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box; }
+
 .payment-page .container {
   margin-top: 100px;
   width: 100%;
   height: 100vh; }
+
 .payment-page .center-box {
   padding: 20px;
   width: 40%;
@@ -407,6 +409,7 @@ footer {
   @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
     .payment-page .center-box {
       width: 70%; } }
+
 .payment-page input[type="text"] {
   padding: 5px;
   height: 35px;
@@ -414,16 +417,20 @@ footer {
   border-style: none;
   border-radius: 3px;
   width: 100%; }
+
 .payment-page .row {
   color: white;
   padding: 5px;
   min-height: 50px;
   width: 100%; }
+
 .payment-page .wrap-row {
   padding: 5px;
   width: 100%; }
+
 .payment-page .small-item {
   width: 31%; }
+
 .payment-page button {
   width: 100px;
   height: 50px;
@@ -473,5 +480,3 @@ footer {
     width: 100px;
     height: 30px;
     cursor: pointer; }
-
-/*# sourceMappingURL=styles.css.map */
