--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -18,7 +18,7 @@ body{
 	font-family: $mainFont;
 }
 .fa{
-	color: $blue;
+	color: $mainFontColor;
 }
 .hidden{ display: none }
 #search-bar{
@@ -56,7 +56,7 @@ body{
 			width: 30px;
 		}
     button{
-      height: 35px;
+      height: 50px;
       width: 80px;
       border: none;
       color: white;
