--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,5 +1,5 @@
 
-
+@import 'misc.scss';
 @import 'sass-flexbox.scss';
 @import "mixins.scss";
 @import "variables.scss";
@@ -28,15 +28,19 @@ body{
   padding: 50px 0px;
 	background-color: $navBackColor;
 	border-bottom: solid 2px #29B6F6;
-  div{
-    padding-bottom: 40px;
-  }
+
   form{
     display: flex;
+		align-items: center;
+		justify-content: space-between;
     @include align-items(center);
+		@include justify-content(space-between);
     position: relative;
-    padding-right: 60px;
+    padding: 35px 0 0;
     width: 75vw;
+		@include bp-tablet() {
+
+		}
     @include bp-mobile() {
       flex-direction: column;
       justify-content: center;
@@ -62,7 +66,6 @@ body{
       color: white;
 			font-size: 20px;
       cursor: pointer;
-      position: absolute;
       right: 0px;
 			@include box-shadow(0px, 0px, 4px, #888888, false);
       @include transitionEase(all, 100ms);
