--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -8,7 +8,7 @@
 /*
     Display
  */
-.previousFlights .prevFlight .previous-search, .search-result, .results, .filters, .filter, .result-box, .flight-info, .price-box, .info, .further-info-button, .further-info-box, .options div, .transport-info, .payment-page .container, .payment-page .center-box, .payment-page .wrap-row, .payment-page .center, .booking-wrapper, .booking-information, .booking-information div {
+#search-bar form div, .previousFlights .prevFlight .previous-search, .search-result, .results, .filters, .filter, .result-box, .flight-info, .price-box, .info, .further-info-button, .further-info-box, .options div, .transport-info, .payment-page .container, .payment-page .center-box, .payment-page .wrap-row, .payment-page .center, .booking-wrapper, .booking-information, .booking-information div, .con-wrapper, .confirmation-info, .booking-number, .information, .passenger-info, .flight-information, .outbound, .inbound, .passengers {
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flexbox;
@@ -27,7 +27,7 @@
   -ms-flex-direction: row;
   flex-direction: row; }
 
-.results, .flight-info, .price-box, .further-info-box, .payment-page .center-box, .booking-information {
+.results, .flight-info, .price-box, .further-info-box, .payment-page .center-box, .booking-information, .con-wrapper, .confirmation-info, .booking-number, .passenger-info, .flight-information {
   -webkit-box-orient: vertical;
   -moz-box-orient: vertical;
   -webkit-flex-direction: column;
@@ -74,7 +74,7 @@
   -webkit-justify-content: flex-end;
   justify-content: flex-end; }
 
-footer, .filter, .price-box, .info, .further-info-button, .payment-page .container, .payment-page .center-box, .booking-wrapper, .booking-information div {
+footer, .filter, .price-box, .info, .further-info-button, .payment-page .container, .payment-page .center-box, .booking-wrapper, .booking-information div, .con-wrapper, .booking-number {
   -webkit-box-pack: center;
   -moz-box-pack: center;
   -webkit-flex-pack: center;
@@ -92,7 +92,7 @@ footer, .filter, .price-box, .info, .further-info-button, .payment-page .contain
   -webkit-justify-content: space-between;
   justify-content: space-between; }
 
-.previousFlights .prevFlight, footer ul, .search-result, .flight-info, .further-info-box, .booking-information {
+.previousFlights .prevFlight, footer ul, .search-result, .flight-info, .further-info-box, .booking-information, .outbound, .inbound, .passengers {
   -moz-justify-content: space-around;
   -webkit-justify-content: space-around;
   justify-content: space-around; }
@@ -100,7 +100,7 @@ footer, .filter, .price-box, .info, .further-info-button, .payment-page .contain
 /*
     Align items
  */
-#search-bar, #search-bar form, .previousFlights .prevFlight, .filter, .price-box, .info, .further-info-button, .options div, .transport-info, .booking-wrapper, .booking-information, .booking-information div {
+#search-bar, #search-bar form, #search-bar form div, .previousFlights .prevFlight, .filter, .price-box, .info, .further-info-button, .options div, .transport-info, .booking-wrapper, .booking-information, .booking-information div, .con-wrapper, .booking-number, .passenger-info, .flight-information, .outbound, .inbound {
   -webkit-box-align: center;
   -ms-flex-align: center;
   -webkit-align-items: center;
@@ -160,40 +160,40 @@ body {
   display: flex;
   flex-direction: column;
   padding: 50px 0px;
-  background-color: #81D4FA;
-  border-bottom: solid 2px #29B6F6; }
+  background-color: #B3E5FC;
+  border-bottom: solid 2px #81D4FA; }
   #search-bar div {
     padding-bottom: 40px; }
   #search-bar form {
     display: flex;
-    position: relative;
-    padding-right: 60px;
-    width: 75vw; }
+    position: relative; }
     @media only screen and (max-width: 736px) {
       #search-bar form {
         flex-direction: column;
         justify-content: center; } }
-    #search-bar form input {
+    #search-bar form input, #search-bar form select {
       margin: 0 5px;
       height: 35px;
       width: 150px;
+      background-color: #B3E5FC;
       color: #E1F5FE;
+      border: solid 1px #E1F5FE;
       font-family: "Josefin Sans", sans-serif;
       font-size: 20px; }
       @media only screen and (max-width: 736px) {
-        #search-bar form input {
+        #search-bar form input, #search-bar form select {
           margin: 2px 0px; } }
     #search-bar form .passengers {
       width: 30px; }
+    #search-bar form .return {
+      width: 100px; }
     #search-bar form button {
-      height: 50px;
+      height: 35px;
       width: 80px;
       border: none;
       color: white;
-      font-size: 20px;
       cursor: pointer;
-      position: absolute;
-      right: 0px;
+      margin-left: 15px;
       -webkit-box-shadow: 0px 0px 4px #888888;
       -moz-box-shadow: 0px 0px 4px #888888;
       box-shadow: 0px 0px 4px #888888;
@@ -209,6 +209,12 @@ body {
         -webkit-box-shadow: 0px 0px 0px #888888;
         -moz-box-shadow: 0px 0px 0px #888888;
         box-shadow: 0px 0px 0px #888888; }
+
+.login button {
+  border: none;
+  width: 100px;
+  height: 30px;
+  font-size: 20px; }
 
 .previousFlights {
   margin: 0 auto;
@@ -266,7 +272,8 @@ footer {
 
 .results {
   width: 75vw;
-  height: auto; }
+  height: auto;
+  margin-top: 25px; }
 
 .filters {
   width: 100%;
@@ -392,12 +399,10 @@ footer {
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box; }
-
 .payment-page .container {
   margin-top: 100px;
   width: 100%;
   height: 100vh; }
-
 .payment-page .center-box {
   padding: 20px;
   width: 40%;
@@ -409,7 +414,6 @@ footer {
   @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
     .payment-page .center-box {
       width: 70%; } }
-
 .payment-page input[type="text"] {
   padding: 5px;
   height: 35px;
@@ -417,20 +421,16 @@ footer {
   border-style: none;
   border-radius: 3px;
   width: 100%; }
-
 .payment-page .row {
   color: white;
   padding: 5px;
   min-height: 50px;
   width: 100%; }
-
 .payment-page .wrap-row {
   padding: 5px;
   width: 100%; }
-
 .payment-page .small-item {
   width: 31%; }
-
 .payment-page button {
   width: 100px;
   height: 50px;
@@ -456,7 +456,7 @@ footer {
   background-color: #03A9F4 !important;
   color: #E1F5FE !important;
   font-family: "Josefin Sans", sans-serif;
-  box-shadow: 0 0 2px #227270; }
+  cursor: pointer; }
 
 .booking-wrapper {
   width: 100%;
@@ -480,3 +480,58 @@ footer {
     width: 100px;
     height: 30px;
     cursor: pointer; }
+
+.con-wrapper {
+  width: 100%;
+  height: 700px;
+  color: #0288D1; }
+
+.confirmation-info {
+  width: 80%;
+  height: 400px; }
+
+.booking-number {
+  height: 70px;
+  width: 100%;
+  border-bottom: solid 1px #B3E5FC; }
+  .booking-number p {
+    font-size: 20px;
+    margin-bottom: 5px; }
+  .booking-number h1 {
+    color: #03A9F4; }
+
+.information {
+  width: 100%;
+  height: 330px; }
+
+.passenger-info, .flight-information {
+  width: 50%;
+  height: 100%; }
+  .passenger-info .info-header, .flight-information .info-header {
+    height: 20px;
+    text-transform: uppercase;
+    border-bottom: solid 2px #0288D1;
+    margin-top: 15px; }
+
+.flight-information {
+  border-right: solid 1px #B3E5FC; }
+
+.outbound, .inbound {
+  width: 90%;
+  height: 100px;
+  border-top: solid 1px #B3E5FC;
+  border-bottom: solid 1px #B3E5FC;
+  margin-top: 20px; }
+
+.bound-info {
+  color: #4FC3F7;
+  font-weight: bold;
+  font-size: 25px;
+  margin-top: 5px; }
+
+.passengers {
+  width: 100%;
+  height: 100px;
+  margin-top: 30px; }
+
+/*# sourceMappingURL=styles.css.map */
