--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -79,7 +79,7 @@
   -webkit-justify-content: flex-end;
   justify-content: flex-end; }
 
-footer, .filter, .price-box, .info, .further-info-button, .payment-page .container, .payment-page .center-box, .booking-wrapper, .booking-information div {
+.filter, .price-box, .info, .further-info-button, .payment-page .container, .payment-page .center-box, .booking-wrapper, .booking-information div {
   -webkit-box-pack: center;
   -moz-box-pack: center;
   -webkit-flex-pack: center;
@@ -97,7 +97,7 @@ footer, .filter, .price-box, .info, .further-info-button, .payment-page .contain
   -webkit-justify-content: space-between;
   justify-content: space-between; }
 
-.previousFlights .prevFlight, footer ul, .search-result, .flight-info, .further-info-box, .booking-information {
+.previousFlights .prevFlight, .search-result, .flight-info, .further-info-box, .booking-information {
   -moz-justify-content: space-around;
   -webkit-justify-content: space-around;
   justify-content: space-around; }
@@ -222,8 +222,19 @@ body {
     padding: 15px;
     margin: 15px 0;
     font-size: 18px; }
+    @media only screen and (max-width: 736px) {
+      .previousFlights .prevFlight {
+        flex-direction: column; } }
     .previousFlights .prevFlight .previous-search {
       width: 400px; }
+      @media only screen and (max-width: 736px) {
+        .previousFlights .prevFlight .previous-search {
+          flex-direction: column;
+          max-width: 100%; }
+          .previousFlights .prevFlight .previous-search input {
+            margin: 10px 0; }
+          .previousFlights .prevFlight .previous-search button {
+            margin: 0 auto; } }
       .previousFlights .prevFlight .previous-search input {
         height: 25px;
         font-size: 15px;
@@ -239,23 +250,6 @@ body {
 
 a {
   text-decoration: none; }
-
-footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 50px;
-  display: flex;
-  padding-top: 30px; }
-  footer ul {
-    width: 100%;
-    display: flex;
-    flex-direction: row; }
-    footer ul li {
-      list-style: none;
-      text-transform: uppercase; }
 
 .destinations {
   color: #0288D1; }
