--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -33,12 +33,12 @@ body{
   }
 	//border-bottom: solid 2px #29B6F6;
   form{
-    display: flex;
-		align-items: center;
-		justify-content: space-between;
-    @include align-items(center);
-		@include justify-content(space-between);
-    position: relative;
+    // display: flex;
+		// align-items: center;
+		// justify-content: space-between;
+    // @include align-items(center);
+		// @include justify-content(space-between);
+    // position: relative;
     padding: 35px 0 0;
     width: 75vw;
 		@include bp-tablet() {
