Responsive Account Details

--- a/app/scss/login.scss
+++ b/app/scss/login.scss
@@ -44,8 +44,11 @@
     text-align: center;
   }
 }
-
-#login{
+.gender{
+  text-align: center;
+  padding: 10px 0;
+}
+.overlaybtn{
   margin: 25px auto 0px;
   text-align: center;
   padding: 7px;
