--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -146,7 +146,11 @@
 #LoginContainer .login span {
   text-align: center; }
 
-#login {
+.gender {
+  text-align: center;
+  padding: 10px 0; }
+
+.overlaybtn {
   margin: 25px auto 0px;
   text-align: center;
   padding: 7px;
